# pyaerocom-preproc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: CI.yml
scripts/: obs_test_files.py  profile.py  python-dotenv-zarr-upload-to-s3-objectstore.py  python-upload-to-s3-objectstore.py
src/pyaerocom_preproc/: check_obs.py  checksum.py  cli.py  config.py  error_db.py  pytest_plugin.py  s3_bucket.py  settings.toml
tests/: conftest.py  test_check_obs.py  test_checksum.py  test_cli.py  test_config.py  test_error_db.py  test_files.py  test_s3_bucket.py
tests/check_obs/: bad_times-1D-2020.nc  fixtures.py  icos-co2-nrt-bir-10.0m-20230401-20230403T100446.nc  incomplete-1D-2020.nc  negative_density-1D-2020.nc  test_coord_checker.py  test_data_checker.py  test_time_checker.py  test_time_helpers.py  valid-1D-2020.nc  wrong_coords-1D-2020.nc  wrong_dims-1D-2020.nc  wrong_units-1D-2020.nc  wrong_years-1D-2020.nc
