[tool.poetry]
name = "pyaerocom-preproc"
version = "0.1.2"
description = "Check and upload observations and model data for PyAerocom usage"
authors = [
    "Alvaro Valdebenito <alvarov@met.no>",
    "Charlie Negri <charlien@met.no>",
]
readme = "README.md"
packages = [{ include = "pyaerocom_preproc", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.26.69"
dynaconf = "^3.1.11"
typer = "^0.7.0"
tomli-w = "^1.0.0"
importlib-resources = { version = "^5.10.2", python = "<3.11" }
numpy = "^1.24.2"
xarray = [
    { version = "<2023.2", python = "~3.8" },
    { version = ">=2023.2", python = "^3.9" },
]
netCDF4 = "^1.6.2"
loguru = "^0.6.0"
blake3 = { version = "^0.3.3", optional = true }

[tool.poetry.extras]
blake3 = ["blake3"]

[tool.poetry.scripts]
pya-pp = "pyaerocom_preproc.cli:main"

[tool.poetry.group.dev.dependencies]
bpython = "^0.24"
scalene = "^1.5.19"
mypy = "^1.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-sugar = "^0.9.6"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["--import-mode=importlib"]

[tool.coverage.run]
source = ["pyaerocom_preproc"]
omit = []

[tool.coverage.report]
skip_covered = true
show_missing = true

[tool.black]
target-version = ['py38']
extend_skip = []
line-length = 99

[tool.isort]
py_version = "38"
profile = "black"
src_paths = ["pyaerocom_preproc", "tests"]
extend_skip = []
line_length = 99

[tool.mypy]
python_version = "3.8"
warn_unused_configs = true
warn_unused_ignores = false
warn_no_return = true
warn_return_any = false
warn_unreachable = true
show_error_codes = true
pretty = true
sqlite_cache = true
# exclude = ""

[[tool.mypy.overrides]]
module = ["xarray", "dynaconf", "boto3", "botocore.*"]
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, py311, lint
skip_missing_interpreters = True
isolated_build = True

[testenv]
commands_pre =
    python --version
commands =
    pytest -ra -q --cov {posargs}
deps =
    pytest
    pytest-cov

[testenv:lint]
skip_install=True
commands =
    pre-commit run --all-files --show-diff-on-failure
deps =
    pre-commit
"""
